// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizer basic strings 1`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 13,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello world",
  },
]
`;

exports[`tokenizer basic strings 2`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 7,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello",
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 15,
      "colStart": 8,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "world",
  },
]
`;

exports[`tokenizer basic strings 3`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 14,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello\\\\\\"world",
  },
]
`;

exports[`tokenizer basic strings 4`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello",
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 13,
      "colStart": 6,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "world",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 16,
      "colStart": 14,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hi",
  },
]
`;

exports[`tokenizer basic strings 5`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "empty",
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 8,
      "colStart": 6,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 13,
      "colStart": 9,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "nice",
  },
]
`;

exports[`tokenizer basic strings 6`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 10,
      "colStart": 0,
      "lineEnd": 3,
      "lineStart": 1,
    },
    "value": "hello

    world",
  },
]
`;

exports[`tokenizer booleans 1`] = `
Array [
  Object {
    "kind": "boolean",
    "location": Object {
      "colEnd": 4,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "true",
  },
]
`;

exports[`tokenizer booleans 2`] = `
Array [
  Object {
    "kind": "boolean",
    "location": Object {
      "colEnd": 5,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "false",
  },
]
`;

exports[`tokenizer booleans 3`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello",
  },
  Object {
    "kind": "boolean",
    "location": Object {
      "colEnd": 10,
      "colStart": 6,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "true",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 16,
      "colStart": 11,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "world",
  },
  Object {
    "kind": "boolean",
    "location": Object {
      "colEnd": 22,
      "colStart": 17,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "false",
  },
]
`;

exports[`tokenizer comments 1`] = `
Array [
  Object {
    "kind": "comment",
    "location": Object {
      "colEnd": 12,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": " a comment!",
  },
]
`;

exports[`tokenizer comments 2`] = `
Array [
  Object {
    "kind": "comment",
    "location": Object {
      "colEnd": 20,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "   another comment!",
  },
]
`;

exports[`tokenizer comments 3`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 7,
      "colStart": 6,
      "lineEnd": 2,
      "lineStart": 2,
    },
    "value": "a",
  },
  Object {
    "kind": "comment",
    "location": Object {
      "colEnd": 14,
      "colStart": 8,
      "lineEnd": 2,
      "lineStart": 2,
    },
    "value": " wow!",
  },
  Object {
    "kind": "comment",
    "location": Object {
      "colEnd": 10,
      "colStart": 4,
      "lineEnd": 3,
      "lineStart": 3,
    },
    "value": "hello",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 7,
      "colStart": 6,
      "lineEnd": 4,
      "lineStart": 4,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer identifiers 1`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello",
  },
]
`;

exports[`tokenizer identifiers 2`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 6,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello2",
  },
]
`;

exports[`tokenizer identifiers 3`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 11,
      "colStart": 6,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "world",
  },
]
`;

exports[`tokenizer identifiers 4`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "h_llo",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 11,
      "colStart": 6,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "wor_d",
  },
]
`;

exports[`tokenizer identifiers 5`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "_",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 3,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "_",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 7,
      "colStart": 4,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "wow",
  },
]
`;

exports[`tokenizer identifiers 6`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 7,
      "colStart": 6,
      "lineEnd": 2,
      "lineStart": 2,
    },
    "value": "a",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 7,
      "colStart": 6,
      "lineEnd": 4,
      "lineStart": 4,
    },
    "value": "b",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 7,
      "colStart": 6,
      "lineEnd": 6,
      "lineStart": 6,
    },
    "value": "c",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 10,
      "colStart": 9,
      "lineEnd": 6,
      "lineStart": 6,
    },
    "value": "d",
  },
]
`;

exports[`tokenizer interpolated strings 1`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 7,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello ",
  },
  Object {
    "kind": "interpolation-start",
    "location": Object {
      "colEnd": 9,
      "colStart": 7,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 13,
      "colStart": 9,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "name",
  },
  Object {
    "kind": "interpolation-end",
    "location": Object {
      "colEnd": 14,
      "colStart": 13,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 15,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 2`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 16,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello \\\\$(name)",
  },
]
`;

exports[`tokenizer interpolated strings 3`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 7,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello ",
  },
  Object {
    "kind": "interpolation-start",
    "location": Object {
      "colEnd": 9,
      "colStart": 7,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 11,
      "colStart": 9,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hi",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 17,
      "colStart": 12,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "there",
  },
  Object {
    "kind": "interpolation-end",
    "location": Object {
      "colEnd": 18,
      "colStart": 17,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 19,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 4`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 7,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello ",
  },
  Object {
    "kind": "interpolation-start",
    "location": Object {
      "colEnd": 9,
      "colStart": 7,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 11,
      "colStart": 9,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hi",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 11,
      "colStart": 6,
      "lineEnd": 3,
      "lineStart": 3,
    },
    "value": "there",
  },
  Object {
    "kind": "interpolation-end",
    "location": Object {
      "colEnd": 12,
      "colStart": 11,
      "lineEnd": 3,
      "lineStart": 3,
    },
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 13,
      "colStart": 0,
      "lineEnd": 3,
      "lineStart": 3,
    },
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 5`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 7,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello ",
  },
  Object {
    "kind": "interpolation-start",
    "location": Object {
      "colEnd": 9,
      "colStart": 7,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 11,
      "colStart": 9,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hi",
  },
  Object {
    "kind": "l-paren",
    "location": Object {
      "colEnd": 13,
      "colStart": 12,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 18,
      "colStart": 13,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "there",
  },
  Object {
    "kind": "r-paren",
    "location": Object {
      "colEnd": 19,
      "colStart": 18,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "interpolation-end",
    "location": Object {
      "colEnd": 20,
      "colStart": 19,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 21,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 6`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 7,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello ",
  },
  Object {
    "kind": "interpolation-start",
    "location": Object {
      "colEnd": 9,
      "colStart": 7,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 25,
      "colStart": 9,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "another string",
  },
  Object {
    "kind": "interpolation-end",
    "location": Object {
      "colEnd": 26,
      "colStart": 25,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 27,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 7`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 7,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello ",
  },
  Object {
    "kind": "interpolation-start",
    "location": Object {
      "colEnd": 9,
      "colStart": 7,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 12,
      "colStart": 9,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "wow",
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 29,
      "colStart": 13,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "another string",
  },
  Object {
    "kind": "interpolation-end",
    "location": Object {
      "colEnd": 30,
      "colStart": 29,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 31,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 8`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 7,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello ",
  },
  Object {
    "kind": "interpolation-start",
    "location": Object {
      "colEnd": 9,
      "colStart": 7,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "l-paren",
    "location": Object {
      "colEnd": 10,
      "colStart": 9,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "l-paren",
    "location": Object {
      "colEnd": 11,
      "colStart": 10,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "l-paren",
    "location": Object {
      "colEnd": 12,
      "colStart": 11,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 16,
      "colStart": 12,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "name",
  },
  Object {
    "kind": "r-paren",
    "location": Object {
      "colEnd": 17,
      "colStart": 16,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "r-paren",
    "location": Object {
      "colEnd": 18,
      "colStart": 17,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "r-paren",
    "location": Object {
      "colEnd": 19,
      "colStart": 18,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "interpolation-end",
    "location": Object {
      "colEnd": 20,
      "colStart": 19,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 21,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 9`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 7,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello ",
  },
  Object {
    "kind": "interpolation-start",
    "location": Object {
      "colEnd": 9,
      "colStart": 7,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 18,
      "colStart": 9,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "another ",
  },
  Object {
    "kind": "interpolation-start",
    "location": Object {
      "colEnd": 20,
      "colStart": 18,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 33,
      "colStart": 20,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "interpolation",
  },
  Object {
    "kind": "interpolation-end",
    "location": Object {
      "colEnd": 34,
      "colStart": 33,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 41,
      "colStart": 9,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": ", nice",
  },
  Object {
    "kind": "interpolation-end",
    "location": Object {
      "colEnd": 42,
      "colStart": 41,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 43,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "",
  },
]
`;

exports[`tokenizer numbers 1`] = `
Array [
  Object {
    "kind": "number",
    "location": Object {
      "colEnd": 2,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "47",
  },
]
`;

exports[`tokenizer numbers 2`] = `
Array [
  Object {
    "kind": "number",
    "location": Object {
      "colEnd": 5,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "47.01",
  },
]
`;

exports[`tokenizer numbers 3`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello",
  },
  Object {
    "kind": "number",
    "location": Object {
      "colEnd": 10,
      "colStart": 6,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "1.22",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 16,
      "colStart": 11,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "world",
  },
  Object {
    "kind": "number",
    "location": Object {
      "colEnd": 18,
      "colStart": 17,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "2",
  },
]
`;

exports[`tokenizer numbers 4`] = `
Array [
  Object {
    "kind": "number",
    "location": Object {
      "colEnd": 6,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "47e100",
  },
]
`;

exports[`tokenizer numbers 5`] = `
Array [
  Object {
    "kind": "number",
    "location": Object {
      "colEnd": 4,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "0x10",
  },
]
`;

exports[`tokenizer numbers 6`] = `
Array [
  Object {
    "kind": "number",
    "location": Object {
      "colEnd": 6,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "0b1010",
  },
]
`;

exports[`tokenizer numbers 7`] = `
Array [
  Object {
    "kind": "number",
    "location": Object {
      "colEnd": 8,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "0o122345",
  },
]
`;

exports[`tokenizer operators 1`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "operator",
    "location": Object {
      "colEnd": 3,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "@",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 4,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer operators 2`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "operator",
    "location": Object {
      "colEnd": 4,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": ">=",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 6,
      "colStart": 5,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer operators 3`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "equals",
    "location": Object {
      "colEnd": 3,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "equals",
    "location": Object {
      "colEnd": 4,
      "colStart": 3,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 6,
      "colStart": 5,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer operators 4`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "operator",
    "location": Object {
      "colEnd": 4,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "!=",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 6,
      "colStart": 5,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer operators 5`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "operator",
    "location": Object {
      "colEnd": 3,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "<",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 4,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer operators 6`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "operator",
    "location": Object {
      "colEnd": 3,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": ">",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 4,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer operators 7`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "operator",
    "location": Object {
      "colEnd": 6,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": ">=!@",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 8,
      "colStart": 7,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer operators 8`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "operator",
    "location": Object {
      "colEnd": 4,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "@@",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 6,
      "colStart": 5,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer operators 9`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "operator",
    "location": Object {
      "colEnd": 3,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "+",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 4,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer operators 10`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "operator",
    "location": Object {
      "colEnd": 3,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "*",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 4,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer operators 11`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "operator",
    "location": Object {
      "colEnd": 3,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "-",
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 4,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer symbols 1`] = `
Array [
  Object {
    "kind": "l-brace",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "wow",
  },
  Object {
    "kind": "r-brace",
    "location": Object {
      "colEnd": 7,
      "colStart": 6,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
]
`;

exports[`tokenizer symbols 2`] = `
Array [
  Object {
    "kind": "l-paren",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "wow",
  },
  Object {
    "kind": "r-paren",
    "location": Object {
      "colEnd": 7,
      "colStart": 6,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
]
`;

exports[`tokenizer symbols 3`] = `
Array [
  Object {
    "kind": "l-bracket",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "wow",
  },
  Object {
    "kind": "r-bracket",
    "location": Object {
      "colEnd": 7,
      "colStart": 6,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
]
`;

exports[`tokenizer symbols 4`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 3,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "wow",
  },
  Object {
    "kind": "dot",
    "location": Object {
      "colEnd": 5,
      "colStart": 4,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 9,
      "colStart": 6,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "com",
  },
]
`;

exports[`tokenizer symbols 5`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "comma",
    "location": Object {
      "colEnd": 2,
      "colStart": 1,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 4,
      "colStart": 3,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
  Object {
    "kind": "comma",
    "location": Object {
      "colEnd": 5,
      "colStart": 4,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 7,
      "colStart": 6,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "c",
  },
]
`;

exports[`tokenizer symbols 6`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "double-arrow",
    "location": Object {
      "colEnd": 4,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 6,
      "colStart": 5,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer symbols 7`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "arrow",
    "location": Object {
      "colEnd": 4,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 6,
      "colStart": 5,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer symbols 8`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "equals",
    "location": Object {
      "colEnd": 3,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 4,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer symbols 9`] = `
Array [
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 1,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "a",
  },
  Object {
    "kind": "colon",
    "location": Object {
      "colEnd": 3,
      "colStart": 2,
      "lineEnd": 1,
      "lineStart": 1,
    },
  },
  Object {
    "kind": "identifier",
    "location": Object {
      "colEnd": 5,
      "colStart": 4,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "b",
  },
]
`;

exports[`tokenizer triple-quoted strings 1`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 17,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello world",
  },
]
`;

exports[`tokenizer triple-quoted strings 2`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 22,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello \\"world\\" ok",
  },
]
`;

exports[`tokenizer triple-quoted strings 3`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 21,
      "colStart": 0,
      "lineEnd": 1,
      "lineStart": 1,
    },
    "value": "hello \\"world ok",
  },
]
`;

exports[`tokenizer triple-quoted strings 4`] = `
Array [
  Object {
    "kind": "string",
    "location": Object {
      "colEnd": 18,
      "colStart": 0,
      "lineEnd": 3,
      "lineStart": 1,
    },
    "value": "hello

      \\"world ok",
  },
]
`;
